# tailor

./: .gitignore  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
.github/docs/: mkdocs.yml  requirements.txt
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
0.2/: 404.html  index.html  sitemap.xml
0.2/explanation/: index.html
0.2/explanation/architecture/: index.html
0.2/explanation/architectures/: index.html
0.2/explanation/base-images/: index.html
0.2/explanation/concepts/: index.html
0.2/explanation/design-rationale/: index.html
0.2/how-to/: index.html
0.2/installation/: index.html
0.2/reference/: index.html
0.2/search/: search_index.json
0.2/tutorials/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3/explanation/: index.html
0.3/how-to/: index.html
0.3/installation/: index.html
0.3/reference/: index.html
0.3/tutorials/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/explanation/: index.html
0.4/how-to/: index.html
0.4/installation/: index.html
0.4/reference/: index.html
0.4/tutorials/: index.html
crates/tailor/: Cargo.toml  build.rs
crates/tailor-config/: Cargo.toml
crates/tailor-config/src/: defaults.rs  error.rs  fragment.rs  include.rs  interpolate.rs  lib.rs  loader.rs  matrix.rs  merge.rs  path.rs  render.rs  schema.rs  types.rs  workspace.rs
crates/tailor-core/: Cargo.toml
crates/tailor-core/src/: ado.rs  catalogue.rs  domain.rs  error.rs  fingerprint.rs  lib.rs  lockfile.rs  orchestrator.rs  ports.rs  selector.rs  signing.rs  stamp.rs  testing.rs
crates/tailor-exec/: Cargo.toml
crates/tailor-exec/src/: arg_builder.rs  color.rs  executor.rs  guard.rs  ic_log.rs  janitor.rs  lib.rs  output_artifacts.rs  path_translate.rs  rpm_farm.rs  working_copy.rs
crates/tailor-exec/src/container/: connection.rs  mod.rs  runtime.rs
crates/tailor-resolve/: Cargo.toml
crates/tailor-resolve/src/: azure_linux.rs  download.rs  lib.rs  local.rs  oci.rs  resolver.rs  toolchain.rs
crates/tailor-sign/: Cargo.toml
crates/tailor-sign/src/: lib.rs
crates/tailor/src/: cli.rs  error.rs  main.rs  run.rs  scaffold.rs
crates/tailor/tests/: cli.rs  export.rs  scaffold.rs  signing.rs  skip.rs
crates/tailor/tests/fixtures/catalogue/: tailor.yaml
crates/tailor/tests/fixtures/catalogue/host/: image.yaml
crates/tailor/tests/fixtures/legacy-architectures/: image.yaml
crates/tailor/tests/fixtures/legacy-defaults-arch/: tailor.yaml
crates/tailor/tests/fixtures/legacy-defaults-arch/solo/: image.yaml
crates/tailor/tests/fixtures/matrix/: image.yaml
crates/tailor/tests/fixtures/matrix/by-arch/: amd64.yaml  arm64.yaml
crates/tailor/tests/fixtures/matrix/by-channel/: edge.yaml  stable.yaml
crates/tailor/tests/fixtures/matrix/by-edition/: lite.yaml  pro.yaml
crates/tailor/tests/fixtures/matrix/by-edition+arch/: pro+arm64.yaml
crates/tailor/tests/fixtures/matrix/layouts/storage/: lite.yaml  pro.yaml
crates/tailor/tests/fixtures/matrix/repos/: edge.repo
crates/tailor/tests/fixtures/oci-platform-mismatch/: image.yaml
crates/tailor/tests/fixtures/signing/: tailor.yaml
crates/tailor/tests/fixtures/signing/bad-profile/: image.yaml
crates/tailor/tests/fixtures/signing/keys/: db.crt  db.key
crates/tailor/tests/fixtures/signing/missing-key/: image.yaml
crates/tailor/tests/fixtures/signing/ok-byo/: image.yaml
crates/tailor/tests/fixtures/signing/ok-default/: image.yaml
crates/tailor/tests/fixtures/signing/unsigned/: image.yaml
crates/tailor/tests/fixtures/standalone/: image.yaml
crates/tailor/tests/fixtures/workspace/: tailor.yaml
crates/tailor/tests/fixtures/workspace/app/: image.yaml
crates/tailor/tests/fixtures/workspace/db/: image.yaml
dev/: 404.html  index.html  sitemap.xml
dev/explanation/: index.html
dev/how-to/: index.html
dev/installation/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: README.md  installation.md
docs/explanation/: README.md  architecture.md  architectures.md  base-images.md  concepts.md  design-rationale.md  merge-model.md
docs/how-to/: README.md  add-an-axis.md  add-an-image.md  build-a-portable-binary.md  build-with-an-azure-linux-base.md  change-an-output-format.md  cross-arch-building.md  export-configs-for-a-pipeline.md  override-a-base-per-axis.md  pin-the-ic-version.md  select-a-container-engine.md  select-and-build-one-cell.md  share-config-with-include.md  sign-an-image.md  use-a-base-image-catalogue.md  use-a-local-ic-image.md  use-a-tools-dir.md
docs/reference/: README.md  cli.md  directives.md  image-yaml.md  output-formats.md  tailor-yaml.md
docs/tutorials/: README.md  getting-started.md  your-first-matrix.md
e2e/: .gitignore  README.md  tailor.yaml
e2e/appliance/: image.yaml
meta/: 2026-07-06-docs-review.md
meta/docs/: 2026-06-17-initial-prompt.md  2026-06-22-architecture.md  2026-06-22-design.md  2026-06-22-image-definitions.md  2026-06-29-ado-matrix.md  2026-06-29-arch-and-platform.md  2026-06-29-base-image-catalogue.md  2026-06-29-container-runtimes.md  2026-06-29-directive-design.md  2026-06-29-directive-gaps.md  2026-06-29-ic-base-config-merging.md  2026-06-29-matrix-constraints.md  2026-06-29-output-artifacts-staging.md  2026-06-29-signing-status.md  2026-06-29-signing.md  2026-06-29-unset-directive.md  2026-07-09-container-mount-isolation.md  2026-07-09-tools-dir-bases.md  2026-07-15-bare-binary-runner.md  2026-07-15-commit-pinned-toolchain.md  2026-07-16-render-ahead-eject.md  2026-07-16-render-ahead-export.md  2026-07-17-pipeline-handoff-strategy.md  2026-07-20-eject-configs-only.md  2026-07-20-export-configs-only.md  2026-07-21-acl-signing.md  2026-07-21-ephemeral-esp-signing-step1.md  2026-07-21-multi-run-customize-and-tools-prep.md  2026-07-21-sub-dimensions.md  2026-07-22-fragment-skip.md  2026-07-22-signing-step1-ic-native.md  ado-matrix.md  arch-and-platform.md  architecture.md  base-image-catalogue.md  container-runtimes.md  design.md  directive-design.md  directive-gaps.md  image-definitions.md  (+5 more)
(+153 files in other folders)
