[package]
name = "tailor-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "tailor: parse, merge, render, and validate image-definition configuration."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = { workspace = true }
