[package]
name = "tailor-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tailor-core = { workspace = true }
tailor-config = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
xxhash-rust = { workspace = true }
tokio = { workspace = true }
oci-client = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
semver = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
