[package]
name = "tailor-sign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tailor-config = { workspace = true }
tailor-core = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
