[package]
name = "tailor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "tailor"
path = "src/main.rs"

[dependencies]
tailor-core = { workspace = true }
tailor-config = { workspace = true }
tailor-resolve = { workspace = true }
tailor-exec = { workspace = true }
tailor-sign = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
